<resources>
    <string name="app_name">仓库管理系统</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="home">首页</string>
    <string name="manage">库存</string>
    <string name="info">信息</string>
    <string name="user">用户</string>
    <string name="about">关于</string>
    <string name="about_content">本软件初步实现了仓库管理操作功能，并且使用了网络编程，实现了移动联网实时办公。本软件还有许多不足的地方，希望老师们予以指导，给出宝贵意见。\n谢谢各位老师！\n作者：王美丽</string>
    <string name="home_des">基本信息</string>
    <string name="info_des">库存信息查询</string>
    <string name="manage_des">仓库管理</string>
    <string name="user_des">用户管理</string>
    <string name="login">登录</string>
    <string name="input_usename">请输入用户名</string>
    <string name="use_name">用户名</string>
    <string name="use_name1">*用户名</string>
    <string name="use_psw">密码</string>
    <string name="use_psw1">*密码</string>
    <string name="input_use_psw">请输入密码</string>
    <string name="alert_use_psw">密码长度不能小于6位</string>
    <string name="regist_account">注册账户</string>
    <string name="regist">注册</string>
    <string name="use_nickname">用户昵称</string>
    <string name="use_nickname1">*用户昵称</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="use_phone">联系电话</string>
    <string name="input_use_phone">请输入联系电话</string>
    <string name="use_address">联系地址</string>
    <string name="input_use_address">请输入联系地址</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="use_sex">用户性别</string>
    <string name="phone_error">手机号码格式不正确</string>
    <string name="psw_error">密码长度不能小于6位</string>
    <string name="regist_success">注册成功</string>
    <string name="login_success">登陆成功</string>
    <string name="change_psw">修改密码</string>
    <string name="nickname">昵称：</string>
    <string name="commit">确定</string>
    <string name="old_psw">原密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="new_psw">新密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="changepwd_success">修改密码成功</string>
    <string name="change_info">修改信息</string>
    <string name="changeinfo_success">修改信息成功</string>
    <string name="add">添加</string>
    <string name="commodity_name">*商品名称</string>
    <string name="input_commodity_name">请输入商品名称</string>
    <string name="commodity_unit">*商品单位</string>
    <string name="input_commodity_unit">请输入商品单位</string>
    <string name="commodity_remark">*商品备注</string>
    <string name="input_commodity_remark">请输入商品备注</string>
    <string name="add_success">添加成功</string>
    <string name="no_data">暂无数据</string>
    <string name="goods_name">商品名称：</string>
    <string name="goods_unit">商品单位：</string>
    <string name="goods_remark">商品备注：</string>
    <string name="change_success">修改成功</string>
    <string name="alert">提示</string>
    <string name="cancle">取消</string>
    <string name="deleteGoods">删除该商品</string>
    <string name="search">搜索</string>
    <string name="input_search_goods">请输入商品名称搜索</string>
    <string name="input_search_client">请输入客户名称搜索</string>
    <string name="input_search_supplier">请输入供应商名称查询</string>
    <string name="supplier_name">*供货商名称</string>
    <string name="supplier_name1">供货商名称：</string>
    <string name="input_supplier_name">请输入供货商名称</string>
    <string name="select_supplier_name">请选择供货商名称</string>
    <string name="linkman">*联系人</string>
    <string name="linkman1">联系人：</string>
    <string name="input_linkman">请输入联系人</string>
    <string name="tel_number">*联系电话</string>
    <string name="tel_number1">联系电话：</string>
    <string name="input_tel_number">请输入联系电话</string>
    <string name="post_code">邮编</string>
    <string name="post_code1">邮编：</string>
    <string name="input_post_code">请输入邮编</string>
    <string name="address">联系地址</string>
    <string name="address1">联系地址：</string>
    <string name="input_address">请输入联系地址</string>
    <string name="input_remark">请输入备注</string>
    <string name="remark">备注</string>
    <string name="remark1">备注：</string>
    <string name="deleteSupplier">删除供应商</string>
    <string name="customer_name">*客户名称</string>
    <string name="customer_name1">客户名称：</string>
    <string name="input_customer_name">请输入客户名称</string>
    <string name="deleteCustomer">删除客户</string>
    <string name="input_search_goods_supplier">输入供货商或商品名称搜索</string>
    <string name="input_search_goods_client">输入客户或商品名称查询</string>
    <string name="deletePutIn">删除入库</string>
    <string name="add_commodity">添加商品</string>
    <string name="add_customer">添加客户</string>
    <string name="add_supplier">添加供应商</string>
    <string name="add_in">添加入库</string>
    <string name="supply_num">进货数量:</string>
    <string name="out_num">出货数量:</string>
    <string name="input_supply_num">请输入进货数量</string>
    <string name="input_out_num">请输入出货数量</string>
    <string name="select_goods_name">请选择商品名称</string>
    <string name="supply_univalence">进货单价：</string>
    <string name="out_univalence">出货单价：</string>
    <string name="input_supply_univalence">请输入进货单价</string>
    <string name="input_out_univalence">请输入出货单价</string>
    <string name="supply_date">进货日期：</string>
    <string name="out_date">出货日期：</string>
    <string name="select_supply_date">选择进货时间</string>
    <string name="select_out_date">选择出货时间</string>
    <string name="supplierlist">供应商列表</string>
    <string name="goodslist">商品列表</string>
    <string name="in_goods_name">入库商品：</string>
    <string name="in_num">入库数量：</string>
    <string name="goods_money">商品单价：</string>
    <string name="change_commodity">修改商品信息</string>
    <string name="change_customer">修改客户信息</string>
    <string name="change_supplier">修改供货商信息</string>
    <string name="change_in">修改入库信息</string>
    <string name="add_out">添加出库</string>
    <string name="select_client_name">请选择客户名称</string>
    <string name="customerlist">客户列表</string>
    <string name="deleteOut">删除出库</string>
    <string name="change_out">修改出库信息</string>
    <string name="goods_num">商品数量：</string>
</resources>
