<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="nickname,nickname,use_psw" />


    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/use_nickname"
        android:textColor="@color/c_2c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_user_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_nickname"
        android:maxLength="20"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/c_2c"
        android:textColorHint="@color/c_d0"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/nickname" />

    <TextView
        android:id="@+id/use_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_phone"
        android:textColor="@color/c_2c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="24dp"
        android:hint="@string/input_use_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/c_2c"
        android:textColorHint="@color/c_d0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/use_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/use_phone" />

    <TextView
        android:id="@+id/use_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_address"
        android:textColor="@color/c_2c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/use_phone" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="24dp"
        android:hint="@string/input_use_address"
        android:maxLength="50"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/c_2c"
        android:textColorHint="@color/c_d0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/use_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/use_address" />

    <TextView
        android:id="@+id/use_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_sex"
        android:textColor="@color/c_2c"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/use_address" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/use_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="@+id/use_sex">

        <RadioButton
            android:id="@+id/rb_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:textColor="@color/c_6b"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/woman"
            android:textColor="@color/c_6b"
            android:textSize="16sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="38dp"
        android:layout_marginRight="21dp"
        android:alpha="0.5"
        android:background="@drawable/selecter_27_common_bt"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/use_sex" />


</android.support.constraint.ConstraintLayout>