<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_commit"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/supplier_name"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_commodity_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/input_supplier_name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supplier_name" />

            <TextView
                android:id="@+id/linkman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/linkman"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/supplier_name"
                app:layout_constraintTop_toBottomOf="@+id/et_commodity_name" />

            <EditText
                android:id="@+id/et_linkman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_linkman"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkman" />

            <TextView
                android:id="@+id/tel_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tel_number"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/supplier_name"
                app:layout_constraintTop_toBottomOf="@+id/et_linkman" />

            <EditText
                android:id="@+id/et_tel_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_tel_number"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tel_number" />

            <TextView
                android:id="@+id/post_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/post_code"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/supplier_name"
                app:layout_constraintTop_toBottomOf="@+id/et_tel_number" />

            <EditText
                android:id="@+id/et_post_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_post_code"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_code" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/supplier_name"
                app:layout_constraintTop_toBottomOf="@+id/et_post_code" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_address"
                android:maxLength="10"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remark"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/supplier_name"
                app:layout_constraintTop_toBottomOf="@+id/et_address" />

            <EditText
                android:id="@+id/et_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_remark"
                android:maxLength="10"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remark" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="21dp"
        android:alpha="0.5"
        android:background="@drawable/selecter_27_common_bt"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/space" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>