<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/old_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/old_psw"
        android:textColor="@color/c_2c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/et_old_psw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/input_old_psw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/c_2c"
        android:textColorHint="@color/c_d0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_psw" />

    <TextView
        android:id="@+id/new_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_psw"
        android:textColor="@color/c_2c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/old_psw"
        app:layout_constraintTop_toBottomOf="@+id/et_old_psw" />

    <EditText
        android:id="@+id/et_new_psw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="24dp"
        android:hint="@string/input_new_psw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/c_2c"
        android:textColorHint="@color/c_d0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_psw" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="21dp"
        android:alpha="0.5"
        android:background="@drawable/selecter_27_common_bt"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@+id/et_new_psw" />

</android.support.constraint.ConstraintLayout>