<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/commodity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/commodity_name"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_commodity_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/input_commodity_name"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commodity_name" />

            <TextView
                android:id="@+id/commodity_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/commodity_unit"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/commodity_name"
                app:layout_constraintTop_toBottomOf="@+id/et_commodity_name" />

            <EditText
                android:id="@+id/et_commodity_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_commodity_unit"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commodity_unit" />

            <TextView
                android:id="@+id/commodity_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/commodity_remark"
                android:textColor="@color/c_2c"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/commodity_name"
                app:layout_constraintTop_toBottomOf="@+id/et_commodity_unit" />

            <EditText
                android:id="@+id/et_commodity_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="24dp"
                android:hint="@string/input_commodity_remark"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/c_2c"
                android:textColorHint="@color/c_d0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commodity_remark" />

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="21dp"
                android:alpha="0.5"
                android:background="@drawable/selecter_27_common_bt"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@+id/et_commodity_remark" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>